@@ -37,5 +37,13 @@ def absolute_location(location, base):
         if os.path.isabs(location):
             return location
         if base:
-            return os.path.join(os.path.dirname(base), location)
+            return os.path.realpath(
+                os.path.join(os.path.dirname(base), location))
     return location
+
+
+def is_relative_path(value):
+    """Check if the given value is a relative path"""
+    if urlparse(value).scheme in ('http', 'https', 'file'):
+        return False
+    return not os.path.isabs(value)
